// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract-component default-alias-import.js 1`] = `
Object {
  "from": "../components/button-default-class-export",
  "importedName": "namespace",
  "name": "Button",
  "repository": Object {
    "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-default-class-export.js",
    "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
    "issues": "https://github.com/ccontrols/component-controls/issues",
  },
  "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-class-export.js",
}
`;

exports[`extract-component default-import.js 1`] = `
Object {
  "from": "../components/button-default-arrow-func",
  "importedName": "default",
  "name": "Button",
  "repository": Object {
    "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-default-arrow-func.js",
    "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
    "issues": "https://github.com/ccontrols/component-controls/issues",
  },
  "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-arrow-func.js",
}
`;

exports[`extract-component kind-component.js 1`] = `
Object {
  "name": "Button",
}
`;

exports[`extract-component named-alias-import.js 1`] = `
Object {
  "from": "../components/button-named-arrow-func",
  "importedName": "Btn",
  "name": "Button",
  "request": undefined,
}
`;

exports[`extract-component named-import.js 1`] = `
Object {
  "from": "../components/button-named-class",
  "importedName": "Button",
  "name": "Button",
  "repository": Object {
    "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-named-class.js",
    "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
    "issues": "https://github.com/ccontrols/component-controls/issues",
  },
  "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-class.js",
}
`;

exports[`extract-component node-modules.js 1`] = `
Object {
  "from": "theme-ui",
  "importedName": "Button",
  "name": "Button",
  "repository": Object {
    "browse": "https://github.com/system-ui/theme-ui/tree/master/dist/index.js",
    "docs": "https://github.com/system-ui/theme-ui/tree/master#readme",
    "issues": "https://github.com/system-ui/theme-ui/issues",
  },
  "request": "/Users/atanasster/component-controls/node_modules/@theme-ui/components/src/Button.js",
}
`;

exports[`extract-component node-modules-source.js 1`] = `
Object {
  "from": "@component-controls/components",
  "importedName": "Subtitle",
  "name": "Button",
  "repository": Object {
    "browse": "https://github.com/ccontrols/component-controls/tree/master/ui/components/dist/index.js",
    "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
    "issues": "https://github.com/ccontrols/component-controls/issues",
  },
  "request": "/Users/atanasster/component-controls/node_modules/@component-controls/components/dist/index.js",
}
`;

exports[`extract-component non-existing-file.js 1`] = `
Object {
  "from": "./Button",
  "importedName": "Btn",
  "name": "Button",
  "request": undefined,
}
`;

exports[`extract-component parameters-component.js 1`] = `
Object {
  "from": "../components/button-named-arrow-func",
  "importedName": "Button",
  "name": "Button",
  "repository": Object {
    "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-named-arrow-func.js",
    "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
    "issues": "https://github.com/ccontrols/component-controls/issues",
  },
  "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-arrow-func.js",
}
`;

exports[`extract-component story-component.js 1`] = `
Object {
  "from": "../components/button-named-class",
  "importedName": "Button",
  "name": "Button",
  "repository": Object {
    "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-named-class.js",
    "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
    "issues": "https://github.com/ccontrols/component-controls/issues",
  },
  "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-class.js",
}
`;
